--- a/BuddyBeatApp/BuddyBeat/app/src/main/res/menu/menu.xml
+++ b/BuddyBeatApp/BuddyBeat/app/src/main/res/menu/menu.xml
@@ -4,5 +4,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/add"
-        android:title="Add songs" />
+        android:title="Create playlist" />
 </menu>
