--- a/BuddyBeatApp/BuddyBeat/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/BuddyBeatApp/BuddyBeat/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,4 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
@@ -28,3 +28,11 @@
         android:strokeWidth="1"
         android:strokeColor="#00000000" />
 </vector>
+-->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/icona_1" />
+    </item>
+</layer-list>
